# homeassistant-rs

./: Cargo.toml  README.md
examples/: ping.rs
src/: client.rs  error.rs  lib.rs  structs.rs
